<resources>
    <string name="app_name">Memes Time</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Почта</string>
    <string name="prompt_password">Пароль (optional)</string>
    <string name="action_sign_in">Войдите или зарегистрируйтесь</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_email">Этот адрес электронной почты недействителен</string>
    <string name="error_invalid_password">Этот пароль слишком короткий</string>
    <string name="error_incorrect_password">Этот пароль неверен</string>
    <string name="error_field_required">Это поле обязательно к заполнению</string>
    <string name="permission_rationale">"Для предоставления электронной почты необходимы разрешения для доступа к электронной почте</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_login">Войти</string>
    <string name="menu_logout">Выйти</string>
    <string name="login_label">Войти</string>
    <string name="email_label">Почта</string>
    <string name="password_label">Пароль</string>
    <string name="send_text">Отправить</string>
    <string name="sign_up">Регистрация</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_email">Почта</string>
    <string name="sign_in">Войти</string>
    <string name="heading_recent">Новые</string>
    <string name="heading_all_top">В топе</string>
    <string name="heading_my_posts">Мои</string>
    <string name="heading_my_top_posts">Мои в топе</string>
    <string name="action_settings">Настройки</string>
    <string name="facebook_app_id">370573573385221</string>
    <string name="edit_my_photo">Редактировать фото профиля</string>
    <string name="save_ed_profile">Сохранить</string>
    <string name="create_post">Создать публикацию</string>
    <string name="info_post">Комментарии</string>
    <string name="add_cat">Добавить категорию</string>
    <string name="error_add_cat">Ошибка добавления категории</string>
    <string name="need_add_cat">Заполните категорию</string>
    <string name="add_image">Добавте картинку</string>
    <string name="find_by_tag">Поиск по тегу #</string>
    <string name="all_cats">Все категории</string>
    <string name="email">Почта</string>
    <string name="passowrd">Пароль</string>
    <string name="login">Лоигн</string>
    <string name="show_pwd">Показать пароль</string>
    <string name="hide_pwd">Спрятать пароль</string>
    <string name="forgot">Забыли пароль?</string>
    <string name="closebutton">Закрыть</string>
    <string name="newUser">Еще не зарегистрированы? Зарегистрируйтесь здесь.</string>
    <string name="fullName">Имя</string>
    <string name="mobileNumber">Мобильный номер</string>
    <string name="location">Локация</string>
    <string name="confirmPassword">Подтвердить пароль</string>
    <string name="terms_conditions">Нажимая "зарегистрироваться", вы соглашаетесь со всеми условиями.</string>
    <string name="signUp">Зарегистрироваться</string>
    <string name="already_user">У Вас уже есть аккаунт? Войдите здесь.</string>
    <string name="registered_emailid">Введите свой зарегистрированный адрес электронной почты ниже:</string>
    <string name="submit">Отправить</string>
    <string name="back">Назад</string>
    <string name="time_ago">назад</string>
    <string name="days">дней</string>
    <string name="hours">час</string>
    <string name="minutes">минут</string>
    <string name="title_new_post">Тэг/заголовок</string>
    <string name="description">Сообщение/описание</string>
    <string name="add_new_pic">Добавить изображение</string>
    <string name="plus">+</string>
    <string name="select_cat">Выберите категорию</string>
    <string name="chose">Выбрать</string>
    <string name="tag_symbol">#</string>
    <string name="categ">Категория: %s</string>
    <string name="cats_t">Категория:</string>
    <string name="likes">лайк</string>
    <string name="comments">Комментарии</string>
    <string name="share">Поделиться</string>
    <string name="commentsImg">коментарии</string>
    <string name="likesImg">лайки</string>
    <string name="post_itemTag">post_item</string>
    <string name="shareimgtag">shareImgTag</string>
    <string name="logging">Входn…</string>
    <string name="my_profile">Мой профиль</string>
    <string name="log_out">Выйти пользователем</string>
    <string name="send">YouTube</string>
    <string name="create_pub">Создать публикацию</string>
    <string name="additional_menu">Дополнительно</string>
    <string name="update_us_name">Фото пользователя обновлено</string>
    <string name="userNameUpd">Никнейм обновлен</string>
    <string name="sendPost">Отправить</string>
    <string name="write_comment">Пишите комментарий</string>
    <string name="enter_tour_comment">Введите Ваш коментарий</string>
    <string name="loading">Загрузка…</string>
    <string name="posting">Публикация…</string>
    <string name="cannot_fetch">Ошибка: не удалось загрузить пользователя.</string>
    <string name="chose_img">Выберите источник изображения</string>
    <string name="loaded">Загружено</string>
    <string name="attention">Внимание</string>
    <string name="exit_cur_user">Выйти текущим пользователем?</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="exit_app">Выйти из приложения?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ranmom_mem">Случайный</string>
    <string name="more">Еще</string>
    <string name="rate_app">Оцените приложение</string>

    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">If you enjoy playing this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_no">No, Thanks</string>
    <string name="top10">Топ 10 сегодня</string>
</resources>
