<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_image_edit"
            android:title="@string/create_pub" />

        <item
            android:id="@+id/nav_draw"
            android:icon="@drawable/ic_format_paint_24dp"
            android:title="Нарисовать" />

    </group>
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_account_circle_white_24dp"
            android:title="@string/additional_menu">
            <menu>
                <item
                    android:id="@+id/my_profile"
                    android:icon="@drawable/ic_account_circle_white_24dp"
                    android:title="@string/my_profile" />

                <item
                    android:id="@+id/nav_rate_app"
                    android:icon="@drawable/ic_rate_review_black_24dp"
                    android:title="@string/rate_app" />

                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@drawable/ic_action_log_out"
                    android:title="@string/log_out" />
                <item
                    android:id="@+id/youtube"
                    android:icon="@drawable/emoji_1f69b"
                    android:title="@string/send"
                    android:visible="false" />

            </menu>
        </item>
    </group>

</menu>
