<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:background="#10d1d9ff"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/post_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_margin="6dp"
                android:gravity="center_vertical"
                tools:ignore="RelativeOverlap" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/post_author_photo"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_action_account_circle_40" />


            <TextView
                android:id="@+id/categ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/post_author_photo"
                android:layout_alignLeft="@+id/post_author"
                android:layout_alignStart="@+id/post_author"
                android:text="@string/cats_t" />

            <TextView
                android:id="@+id/post_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="6dp"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="16dp"
                android:layout_toEndOf="@+id/post_author_photo"
                android:layout_toRightOf="@+id/post_author_photo"
                android:gravity="center_vertical"
                tools:text="someauthor@email.com" />


        </RelativeLayout>


        <View
            android:id="@+id/viewLineTop"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_margin="4dp"
            android:background="#30e91e63" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/post_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:gravity="center_horizontal"
                    tools:text="" />

                <TextView
                    android:id="@+id/post_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    tools:text="fdhgfh" />

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_piture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/post_itemTag" />
        </LinearLayout>

        <View
            android:id="@+id/viewLineBot"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_margin="8dp"
            android:background="#30e91e63" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/star_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/like"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:alpha=".75"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/likesImg"
                    android:src="@drawable/ic_toggle_star_outline_24" />

                <TextView
                    android:id="@+id/post_num_stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="7" />

                <TextView
                    android:id="@+id/post_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:gravity="center"
                    android:text="@string/likes" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/comments_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/comment"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:alpha=".75"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/commentsImg"
                    android:src="@drawable/ic_comment_black_24dp" />

                <TextView
                    android:id="@+id/comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/comments" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/share_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/share_img"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:contentDescription="@string/shareimgtag"
                    android:alpha=".75"
                    android:background="?attr/selectableItemBackground"
                    android:src="@drawable/ic_share_black_24dp" />

                <TextView
                    android:id="@+id/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/share" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
