<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <ImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/firebase_lockup_400" />

    <LinearLayout
        android:id="@+id/layout_email_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/field_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/field_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/passowrd"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            android:maxLines="1"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:id="@+id/button_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/sign_in"
            fancy:mfb_borderColor="#90FFFFFF"
            fancy:mfb_borderWidth="1dp"
            fancy:mfb_defaultColor="#7ab800"
            fancy:mfb_focusColor="#9bd823"
            fancy:mfb_iconPosition="left"
            fancy:mfb_radius="20dp"
            fancy:mfb_textColor="#FFFFFF" />


        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/sign_up"
            fancy:mfb_borderColor="#90FFFFFF"
            fancy:mfb_borderWidth="1dp"
            fancy:mfb_defaultColor="#7ab800"
            fancy:mfb_focusColor="#9bd823"
            fancy:mfb_iconPosition="left"
            fancy:mfb_radius="20dp"
            fancy:mfb_textColor="#FFFFFF" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp" />
    </LinearLayout>


</RelativeLayout>
